# photo-mosaic

./: .clang-format  .gitignore  CMakeLists.txt  README.md  thorq.py
extlibs/: CMakeLists.txt
extlibs/log/: log.c  log.h
src/: main.c  photomosaic.h  util.c  util.h
src/mpi/: photomosaic.c
src/naive/: photomosaic.c
src/opencl/: clwrapper.c  clwrapper.h  common.c  common.h  photomosaic.c  photomosaic.cl  tiling.cl
src/openmp/: photomosaic.c
